--- a/shoppingAdvisory/css/index.css
+++ b/shoppingAdvisory/css/index.css
@@ -30,7 +30,7 @@
     font-size: 2.6rem;
 }
 /*标题 end*/
-/*简介 start*/
+/*内容 start*/
 
 section {
     border-bottom: 1rem solid #F2F2F2;
@@ -76,10 +76,23 @@ section h3.question>i {
     -ms-transform: rotate(-90deg);
     -o-transform: rotate(-90deg);
     transform: rotate(-90deg);
+
+}
+section h3.question>i.active {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    transform: rotate(90deg);
+    -webkit-transition: rotate 1s;
+    transition: rotate 1s;
 }
 .bgf5 {
     background: #F5F5F5;
     display: none;
+}
+section:first-of-type li:first-of-type .bgf5 {
+    display: block;
 }
 section p {
     padding: 1rem;
@@ -111,6 +124,7 @@ section p {
 .contact a:last-child  i {
     background-color:#F5BD00;
 }
+/*内容 end*/
 footer {
     padding: 1rem;
     font-size: 1.6rem;
