--- a/liveShopping/css/trainerRecommend.css
+++ b/liveShopping/css/trainerRecommend.css
@@ -1,4 +1,4 @@
-/*¸²¸Ç²å¼şÑùÊ½*/
+/*è¦†ç›–æ’ä»¶æ ·å¼*/
 .mui-scroll-wrapper {
     z-index: 1;
 }
@@ -10,7 +10,7 @@ h1 {
     margin: 0;
     line-height: 4rem;
 }
-/*Í·²¿*/
+/*å¤´éƒ¨*/
 header {
     height: 4rem;
     line-height: 4rem;
@@ -32,7 +32,7 @@ header a {
     -webkit-transform: scaleY(2);
     transform: scaleY(2);
 }
-/*µ¥¸öÉÌÆ·*/
+/*å•ä¸ªå•†å“*/
 .product-box:first-of-type {
     margin-top: 4rem;
 }
@@ -74,7 +74,7 @@ header a {
     font-size: 1rem;
     color: #ffffff;
     -webkit-transform: scale(0.8, 0.8);
-    transform: scale(0.8, 0.8);/*ÎÄ×ÖÓĞ×îĞ¡ÏŞÖÆ*/
+    transform: scale(0.8, 0.8);/*æ–‡å­—æœ‰æœ€å°é™åˆ¶*/
 }
 .buyinfo {
     margin-top: 1.5rem;
