--- a/liveShopping/css/productSelect.css
+++ b/liveShopping/css/productSelect.css
@@ -82,10 +82,21 @@ main {
     margin-bottom: 4rem;
 }
 .noProduct {
-    background: url("../image/default_NoVideo@2x.png") no-repeat;
+    width: 100%;
+    height: 100%;
+    background: url("../image/default_NoVideo@2x.png") no-repeat center;
+    -webkit-background-size: 60%;
+    background-size: 60%;
 }
 .noProduct::after {
     content: '暂无直播商品...';
+    position: absolute;
+    bottom: 5rem;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    font-size: 1.4rem;
+
 }
 /*单个商品*/
 .product-box {
@@ -160,6 +171,7 @@ footer a {
 }
 footer .addProd {
     color: #33C774;
+    width: 100%;
 
 }
 footer .allManage {
@@ -168,4 +180,5 @@ footer .allManage {
     height: 2rem;
     line-height: 2rem;
     margin-top: 1rem;
+    display: none;
 }
