--- a/liveShopping/css/productAddAndDel.css
+++ b/liveShopping/css/productAddAndDel.css
@@ -47,10 +47,11 @@ nav {
 }
 .shop-nav i {
     background: url(../image/sort.png) no-repeat;
-    height: 12px;
+    height: 6px;
     width: 8px;
     display: inline-block;
     margin-left: 6px;
+    margin-bottom: 2px;
 }
 li.up,li.down {
     color: #33C774;
@@ -59,7 +60,7 @@ li.up i {
     background: url(../image/sort.png) no-repeat -8px 0px;
 }
 li.down i {
-    background: url(../image/sort.png) no-repeat right;
+    background: url(../image/sort.png) no-repeat bottom right;
 }
 main {
     margin-top: 4rem;
