直播够物差分页

--- a/liveShopping/css/base.css
+++ b/liveShopping/css/base.css
@@ -66,6 +66,9 @@ a:hover {
     text-decoration: none;
     -webkit-touch-callout: none;
 }
+.button:active {
+    background-color: #33C774 !important;
+}
 
 li,
 ol,
