--- a/liveShopping/css/coupon.css
+++ b/liveShopping/css/coupon.css
@@ -108,46 +108,69 @@ main {
 
 .subbox3 {
     bottom: 0;
-    margin:0.4rem 1rem;
+    /*margin:0.4rem 1rem;*/
+    margin-bottom: 0.5rem;
 }
 .subbox3 .fl {
     font-size: 1rem;
     color: #BCBCBC;
     line-height: 2rem;
+    margin-left: 1rem;
 }
 .subbox3 .fr {
-    margin-right: 2rem;
+    margin-right: 1rem;
+}
+.subbox3 .fr input {
+    /*border: 1px solid #ccc;*/
+    line-height: 100%;
+    height: 100%;
+    vertical-align: middle;
+    text-align: center;
+}
+.subbox3 .fr button {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 100%;
+    overflow: hidden;
+    width: 2rem;
+    height: 100%;
+    padding: 0;
+    color: #555;
+    border: 1px solid #ccc;
+    border-radius: 0.3rem;
+    background-color: #f9f9f9;
+    vertical-align: middle;
 }
 /*数字输入框*/
-.mui-numbox {
-    position: relative;
-    display: inline-block;
-    overflow: hidden;
-    min-width: 5rem !important;
-    width: 8rem !important;
-    height: 1.8rem;
-    padding: 0 2rem;
-    vertical-align: top;
-    vertical-align: middle;
-    border: solid 1px #bbb;
-    border-radius: 3px;
-    background-color: #fff;
-    border: 0 solid #999999;
-    border-radius: 4px;
-}
-.mui-numbox .mui-numbox-input {
-    display: inline-block;
-    overflow: hidden;
-    height: 100%;
-    margin: 0;
-    padding: 0 3px!important;
-    text-align: center;
-    text-overflow: ellipsis;
-    word-break: normal;
-    border: none!important;
-    border-radius: 0!important;
-}
-.mui-numbox [class*=btn-numbox], .mui-numbox [class*=numbox-btn] {
+/*.numbox {*/
+    /*position: relative;*/
+    /*display: inline-block;*/
+    /*overflow: hidden;*/
+    /*min-width: 5rem !important;*/
+    /*width: 8rem !important;*/
+    /*height: 1.8rem;*/
+    /*padding: 0 2rem;*/
+    /*vertical-align: top;*/
+    /*vertical-align: middle;*/
+    /*border: solid 1px #bbb;*/
+    /*border-radius: 3px;*/
+    /*background-color: #fff;*/
+    /*border: 0 solid #999999;*/
+    /*border-radius: 4px;*/
+/*}*/
+/*.numbox .numbox-input {*/
+    /*display: inline-block;*/
+    /*overflow: hidden;*/
+    /*height: 100%;*/
+    /*margin: 0;*/
+    /*padding: 0 3px!important;*/
+    /*text-align: center;*/
+    /*text-overflow: ellipsis;*/
+    /*word-break: normal;*/
+    /*border: none!important;*/
+    /*border-radius: 0!important;*/
+/*}*/
+.numbox [class*=btn-numbox], .numbox [class*=numbox-btn] {
     font-size: 18px;
     font-weight: 400;
     line-height: 100%;
@@ -170,8 +193,63 @@ footer {
     height: 4rem;
     line-height: 4rem;
     font-size: 1.6rem;
-    color: #ffffff;
     width: 100%;
-    background: #33C774;
     text-align: center;
+    background: #FFFFFF;
+    box-shadow: 0 1px 1px 0 rgba(0,0,0,0.50);
+    color: #B9B9B9;
+}
+footer.enabled {
+    color: #ffffff;
+    background: #33C774;
+}
+
+
+
+
+
+.product-check {
+    overflow: hidden;
+    float: left;
+    position: relative;
+    width: 70%;
+    height: 12rem;
+}
+.product-check span {
+    position: absolute;
+    top: 1rem;
+    left: 3.5rem;
+    color:#bcbcbc;
+    font-size: 1.4rem;
+
+}
+.product-check input {
+    position: absolute;
+    width: 2rem;
+    height: 2rem;
+    opacity: 0;
+    z-index: 999;
+    top: 1rem;
+    left: 1rem;
+
+}
+.checkbox + label {
+    background-color: #FFF;
+    border: 1px solid #C1CACA;
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    width: 2rem;
+    height: 2rem;
+    top: 1rem;
+    left: 1rem;
+
+}
+.checkbox:checked + label {
+    width: 2rem;
+    height: 2rem;
+    background: url(../image/selected@3x.png) no-repeat;
+    background-size: 2rem 2rem;
+    color: #243441;
+    border: none;
 }
