--- a/liveShopping/css/productAddAndDel.css
+++ b/liveShopping/css/productAddAndDel.css
@@ -155,6 +155,7 @@ footer .addProd.enabled {
 }
 .product-check input {
     position: absolute;
+    z-index: 1;
     width: 100%;
     height: 100%;
     opacity: 0;
